<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/add_edit_row_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/add_edit_ic_contdesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_stars_grey_500_24dp"/>

    <TextView
        android:id="@+id/add_edit_row_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/add_edit_header_textview_contdesc"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/add_edit_row_ic"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Category / Date / Time"
        app:layout_constraintVertical_bias="0.512"/>

    <TextView
        android:id="@+id/add_edit_row_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/add_edit_content_textview_contdesc"
        app:layout_constraintLeft_toLeftOf="@+id/add_edit_row_header"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_row_header"
        tools:text="Content to be displayed according to food item"/>

    <!--TODO With runtime available, play around with the margins and constraints to center textviews-->
</android.support.constraint.ConstraintLayout>