<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginTop="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sec_header_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/card_header_date_textview_contdesc"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/sec_header_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30"/>

        <!-- TODO Add TextView to sum card's calories intake (per day) -->

        <TextView
            android:id="@+id/sec_header_weekday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/card_header_weekday_textview_contdesc"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sec_header_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sunday"/>

        <TextView
            android:id="@+id/sec_header_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/card_header_month_textview_contdesc"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sec_header_date"
            app:layout_constraintTop_toBottomOf="@+id/sec_header_weekday"
            tools:text="November"/>

        <TextView
            android:id="@+id/sec_header_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/card_header_year_textview_contdesc"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/sec_header_month"
            app:layout_constraintTop_toBottomOf="@+id/sec_header_weekday"
            tools:text="2018"/>

        <View
            android:id="@+id/sec_header_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/md_grey_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sec_header_date"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
    <!-- TODO Adjust content description sources content and/or names -->