<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/sec_child_food_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/food_icon_imageview_contdesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_stars_grey_500_24dp"/>

        <!-- Note to self - other than wrap_content and match_parent, there's also 0dp -->
        <!-- Which stands for match_constraints -->
        <!-- This one line prevents textviews from overlapping horizontally -->
        <TextView
            android:id="@+id/sec_child_food_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/food_text_textview_contdesc"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@id/sec_child_food_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/sec_child_food_icon"
            tools:text="Double cheeseburger Double cheeseburger Double cheeseburger Double cheeseburger"/>
        <!--app:layout_constraintBottom_toBottomOf="@id/sec_child_food_icon"-->
        <!--app:layout_constraintTop_toTopOf="@id/sec_child_food_icon"-->

        <TextView
            android:id="@+id/sec_child_food_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/food_time_textview_contdesc"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="16:20"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>