<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_date_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margin_horizontal"
    android:layout_marginRight="@dimen/card_margin_horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardUseCompatPadding="true">
    <!--app:cardUseCompatPadding="true"-->
    <!--android:clickable="true"-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/card_header_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/card_header_date_textview_contdesc"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/card_date_divider"
            app:layout_constraintBottom_toTopOf="@id/card_date_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30"/>

        <!-- TODO Add TextView to sum card's calories intake (per day) -->

        <TextView
            android:id="@+id/card_header_weekday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/card_header_weekday_textview_contdesc"
            app:layout_constraintLeft_toRightOf="@+id/card_header_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sunday"/>

        <TextView
            android:id="@+id/card_header_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/card_header_month_textview_contdesc"
            app:layout_constraintLeft_toRightOf="@+id/card_header_date"
            app:layout_constraintTop_toBottomOf="@+id/card_header_weekday"
            tools:text="November"/>

        <TextView
            android:id="@+id/card_header_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/card_header_year_textview_contdesc"
            app:layout_constraintLeft_toRightOf="@+id/card_header_month"
            app:layout_constraintTop_toBottomOf="@+id/card_header_weekday"
            tools:text="2018"/>

        <View
            android:id="@+id/card_date_divider"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:background="@color/md_grey_300"
            app:layout_constraintBottom_toTopOf="@id/card_recyclerview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_header_date"
            />

        <!-- TODO Make this divider smaller -->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/card_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_date_divider"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/row_inner_rv_food_item"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>